Fix mobile spacing

--- a/sass/blocks/_section.scss
+++ b/sass/blocks/_section.scss
@@ -43,7 +43,7 @@
   &__item {
     @include type(body, small);
     line-height: 1.8;
-    margin-bottom: 1.25rem;
+    margin-bottom: 3.75rem;
 
     @media (--tablet) {
       width: calc(50% - 1.875rem);
